note and time until school ends timer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/index.tsx", "components/time.js"  ],
+, "pages/index.tsx", "components/time.js", "components/end.js"  ],
   "exclude": [
     "node_modules"
   ]
