--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "next": "latest",
     "nightwind": "^1.1.12",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.19",
