--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "next": "latest",
+    "next-pwa": "^5.3.1",
     "nightwind": "^1.1.12",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
