--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,26 +1,26 @@
 {
-  "name": "PWA App",
-  "short_name": "App",
+  "name": "SHC Clock",
+  "short_name": "Clock",
   "icons": [
     {
-      "src": "/icons/android-chrome-192x192.png",
+      "src": "/icons/shc-app-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icons/android-chrome-384x384.png",
+      "src": "/icons/shc-app-384.png",
       "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/shc-app-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
+  "theme_color": "#080404",
+  "background_color": "#1f2937",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait"
