--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nightwind": "^1.1.12",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "swr": "^1.0.1"
   },
