--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "next": "latest",
     "next-pwa": "^5.3.1",
     "nightwind": "^1.1.12",
