privacy and blog page

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.4.1",
     "formik": "^2.2.9",
     "next": "latest",
     "next-pwa": "^5.3.1",
