--- a/package.json
+++ b/package.json
@@ -3,25 +3,27 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "update": "yarn yarn-upgrade-all"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.4.1",
     "formik": "^2.2.9",
-    "next": "latest",
-    "next-pwa": "^5.3.1",
+    "next": "^12.0.2",
+    "next-pwa": "^5.4.0",
     "nightwind": "^1.1.12",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "yarn-upgrade-all": "^0.5.4"
   },
   "devDependencies": {
-    "@types/react": "^17.0.19",
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4",
-    "typescript": "^4.4.2"
+    "@types/react": "^17.0.33",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19",
+    "typescript": "^4.4.4"
   }
 }
