--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,18 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
-, "pages/index.tsx", "components/time.js", "components/end.js", "public/sw.js"  ],
+    "**/*.tsx",
+    "pages/index.tsx",
+    "components/time.js",
+    "components/end.js",
+    "public/sw.js"
+  ],
   "exclude": [
     "node_modules"
   ]
